--- a/Single_price_grid_component/style.css
+++ b/Single_price_grid_component/style.css
@@ -1,14 +1,39 @@
 body {
-    background-color: rgb(150, 159, 167);
+    background-color: white;
+    margin: 30px auto;
 }
 #HEAD {
-    background-color: aliceblue;
+    background-color: rgb(224, 6, 240);
+    margin: 30px auto;
+    max-width: 500px;
+    margin-bottom: 0px;
+    padding: 10px;
+    padding-left: 30px;
+    
+}
+#left-right {
+    display: flex;
+    max-width: 500px;
+    margin: 0 auto;
+    
 }
 
 #left {
     background-color: rgb(6, 156, 156);
+    margin-top: red;
+    padding: 10px;
+    max-width: 500px;
+    padding-left: 30px;
+    padding-right: 80px;
+    
 }
 
 #right {
     background-color: aquamarine;
+    margin-top: red;
+    padding: 10px;
+    padding-left: 30px;
+    
+    
+    max-width: 500px;
 }
