--- a/Single_price_grid_component/style.css
+++ b/Single_price_grid_component/style.css
@@ -13,7 +13,7 @@ body {
 }
 #left-right {
     display: flex;
-    max-width: 500px;
+    max-width: 600px;
     margin: 0 auto;
     
 }
@@ -22,9 +22,8 @@ body {
     background-color: rgb(6, 156, 156);
     margin-top: red;
     padding: 10px;
-    max-width: 500px;
     padding-left: 30px;
-    padding-right: 80px;
+    padding-right: 40px;
     
 }
 
@@ -32,8 +31,12 @@ body {
     background-color: aquamarine;
     margin-top: red;
     padding: 10px;
-    padding-left: 30px;
+    padding-left: 10px;
+    padding-right: 70px;
     
     
-    max-width: 500px;
+    
 }
+ul {
+    list-style-type: none;
+  }
