--- a/Single_price_grid_component/style.css
+++ b/Single_price_grid_component/style.css
@@ -1,42 +1,110 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: white;
-    margin: 30px auto;
-}
-#HEAD {
-    background-color: rgb(224, 6, 240);
-    margin: 30px auto;
-    max-width: 500px;
-    margin-bottom: 0px;
-    padding: 10px;
-    padding-left: 30px;
-    
-}
-#left-right {
     display: flex;
-    max-width: 600px;
-    margin: 0 auto;
-    
+    flex-direction: column;
+    justify-content: center !important;
+    align-items: center !important;
+    min-height: 100vh;
+    font-size: 16px;
 }
 
-#left {
-    background-color: rgb(6, 156, 156);
-    margin-top: red;
-    padding: 10px;
-    padding-left: 30px;
-    padding-right: 40px;
-    
-}
-
-#right {
-    background-color: aquamarine;
-    margin-top: red;
-    padding: 10px;
-    padding-left: 10px;
-    padding-right: 70px;
-    
-    
-    
-}
 ul {
     list-style-type: none;
-  }
+}
+.card {
+    width: 555px;
+    border-radius: 12px;
+    box-shadow: 0 15px 20px 10px rgba(37, 43, 70, 0.1);
+}
+.Community {
+    padding: 40px;
+}
+h2 {
+    color: hsl(179,62%,43%);
+    padding-bottom: 25px;
+    opacity: 0.9;
+}
+.Community h3{
+    font-weight: bold;
+    color: hsl(71,73%,54%);
+    padding-bottom: 16px;
+    opacity: 0.9;
+}
+.Community p {
+    color: hsl(218,22%,67%);
+    line-height: 30px;
+    opacity: 0.7;
+}
+.plan {
+    display: flex;
+}
+.sub {
+    padding: 40px;
+    background-color: hsl(179,62%,43%);
+    color: #fff;
+}
+.sub h3{
+    padding-bottom: 20px;
+    opacity: 0.9;
+}
+.price {
+    display: inline-lex !important;
+}
+.price-p{
+    padding: 10px 0px 20px 0px;
+}
+.access{
+    padding: 10px 0px 20px 0px;
+    opacity: 0.8;
+}
+button{
+    margin-top: 20px;
+    width: 100%;
+    font-size: 16px;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: hsl(71,73%,54%);
+    color: #fff;
+    border: none;
+}
+.Why {
+    padding: 40px;
+    background-color: hsl(179,62%,43%);
+    opacity: 0.8;
+    color: #fff;
+}
+.Why h3 {
+    padding-bottom: 20px;
+    opacity: 0.9 !important;
+}
+li{
+    padding-bottom: 3px;
+    font-size: 16px;
+    opacity: 0.6;
+}
+@media (min-width:768px) {
+    .Why .sub{
+        width: 50%;
+    }
+}
+@media (max-width:768px) {
+    .card{
+        width: 90%;
+        margin-top: 40px;
+    }
+    .plan{
+        display: flex;
+        flex-direction: column;
+    }
+    .Community{
+        padding-right: 20px;
+    }
+    .Why .sub{
+        width: 100%;
+    }
+}
