--- a/Single_price_grid_component/style.css
+++ b/Single_price_grid_component/style.css
@@ -18,7 +18,6 @@ ul {
 }
 .card {
     width: 555px;
-    border-radius: 12px;
     box-shadow: 0 15px 20px 10px rgba(37, 43, 70, 0.1);
 }
 .Community {
@@ -106,5 +105,8 @@ li{
     }
     .Why .sub{
         width: 100%;
+    }
+    .attribution{
+        display: flex;
     }
 }
