start create qr component and create style css file

--- a/Single_price_grid_component/style.css
+++ b/Single_price_grid_component/style.css
@@ -106,7 +106,7 @@ li{
     .Why .sub{
         width: 100%;
     }
-    .attribution{
-        display: flex;
-    }
+    .attribution { 
+        font-size: 11px; 
+        text-align: center; }
 }
