--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -95,14 +95,14 @@ body {
 .rows {
     display: flex;
     flex-direction: column;
-    gap: .8rem;
+    gap: 0.8rem;
 }
 .row {
-    display: flex;
-    border-radius: 10px;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem .5rem;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0.5rem;
 }
 .row:nth-child(1){
     background-color: hsl(0, 100%, 67%, .2);
@@ -131,7 +131,7 @@ body {
 .badge {
     display: flex;
     align-items: center;
-    gap: .5rem;
+    gap: 0.5rem;
 }
 .row p {
     color: gray;
@@ -177,6 +177,11 @@ body {
 
 
 
-/*
-.attribution { font-size: 15px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }*/
+
+.attribution { 
+    font-size: 15px; 
+    text-align: center; 
+    display: flex;
+    flex-direction: column;
+}
+.attribution a { color: hsl(228, 45%, 44%); }
